# M-moire_M2

./: .env.example  .gitignore  CLAUDE.md  RAPPORT_TECHNIQUE.md  README.md  pyproject.toml
data/: repos.yaml
experiments/: analyze_benchmark.py  explore_mcp.py  generate_diagrams.py  run_full_benchmark.py  test_all_agents.py  test_all_architectures.py  test_base_agent.py  test_evaluation.py  test_instrumentation.py  test_supervisor.py
prompts/: code_quality.md  community.md  community_team_supervisor.md  documentation.md  license.md  security.md  supervisor.md  tech_team_supervisor.md
results/: benchmark_summary.json  comparison_table.txt
results/analysis/: by_category.json  mann_whitney.json
results/analysis-claude/: metrics_table.csv  redundancy_matrix.json  summary_report.txt
results/diagrams/: graph_decentralized.md  graph_hierarchical.md  graph_react_agent.md  graph_supervisor.md
results/logs-claude/: comparison-decentralized-001.jsonl  comparison-hierarchical-001.jsonl  comparison-supervisor-001.jsonl  decentralized-ansible-ansible-run1.error  decentralized-ansible-ansible-run2.error  decentralized-ansible-ansible-run3.error  decentralized-django-django-run1.jsonl  decentralized-django-django-run2.jsonl  decentralized-django-django-run3.jsonl  decentralized-encode-httpx-run1.error  decentralized-encode-httpx-run2.error  decentralized-encode-httpx-run3.error  decentralized-facebook-react-run1.jsonl  decentralized-facebook-react-run2.jsonl  decentralized-facebook-react-run3.jsonl  decentralized-kennethreitz-records-run1.error  (+81 more)
src/: config.py
tests/: conftest.py  test_instrumented_client.py
(+44 files in other folders)
